Update style.css according to user stories
Apply grid template to main and place nav on the left

--- a/styles.css
+++ b/styles.css
@@ -1,15 +1,16 @@
-#nav-bar {
-    position: fixed;
-    width: 100%;
-    background-color: lightgreen;
-    left: 5px;
-    top: 5px;
-    border: 1px solid green;
+main {
+    display: grid;
+    grid-template-columns: 30% 70%;
+    grid-template-areas: 
+        "nav section1"
+        "nav section2"
+        "nav section3"
+        "nav section4"
+        "nav section5";
 }
-#First_Section {
-    margin-top: 100px;
+nav {
+    grid-area: nav;
 }
-
 @media (max-width: 300px) {
     main {
         display: flex;
